# finance-discord-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py  main.py  prompts.yaml  pyproject.toml
cogs/: __init__.py  admin.py  analysis.py  chip.py  daily_chip.py  example.py  finance.py  financial_summary.py  webhook.py
data/: scheduled_tasks.json
docs/: chip.md
schemas/: __init__.py  source.py
scripts/: test_sources.py
services/: llm.py  mops.py  prompt.py  twse.py  youtube.py
services/finance/: source_manager.py
services/finance/sources/: base.py  rss.py  youtube.py
utils/: __init__.py  cache.py  checks.py  http.py  logger.py  scheduler.py
