[project]
name = "finance-discord-bot"
version = "0.1.0"
description = "Discord bot for financial data analysis, integrating with various API services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.3.0",
    "httpx>=0.28.1",
    "openai>=2.14.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cogs", "schemas", "services", "utils"]
